--- a/src/models/CMakeLists.txt
+++ b/src/models/CMakeLists.txt
@@ -19,7 +19,7 @@ set(moc-headers
     "seedsize.hpp"
     "seedtype.hpp"
 )
-qt5_wrap_cpp(moc-sources "${moc-headers}")
+qt_wrap_cpp(moc-sources "${moc-headers}")
 
 add_library(
   metier-models OBJECT
