--- a/licenses/CMakeLists.txt
+++ b/licenses/CMakeLists.txt
@@ -3,37 +3,38 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
-add_library(
-  metier-license OBJECT
-  "boost.h"
-  "libzmq.h"
-  "license.cpp"
-  "license.hpp"
-  "lmdb.h"
-  "metier.h"
-  "openssl.h"
-  "qt.h"
-  "sodium.h"
+configure_file(
+  "license.cpp.in"
+  "${CMAKE_CURRENT_BINARY_DIR}/license.cpp"
+  @ONLY
 )
-target_include_directories(
-  metier-license
-  INTERFACE "${CMAKE_CURRENT_SOURCE_DIR}"
-  PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}" "${opentxs_INCLUDE_DIRS}"
-)
-target_compile_definitions(
-  metier-license PRIVATE -DMETIER_APPSTREAM_NAME="${METIER_APPSTREAM_NAME}"
-)
-target_link_libraries(
-  metier-license
+
+target_sources(
+  metier-common
   PRIVATE
+    "${CMAKE_CURRENT_BINARY_DIR}/license.cpp"
+    "boost.h"
+    "libzmq.h"
+    "license.hpp"
+    "lmdb.h"
+    "metier.h"
+    "openssl.h"
+    "qt.h"
+    "sodium.h"
+)
+
+target_include_directories(
+  metier-common PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}" "${opentxs_INCLUDE_DIRS}"
+)
+
+target_include_directories(
+  metier-common SYSTEM PRIVATE "${opentxs_INCLUDE_DIRS}"
+)
+
+target_link_libraries(
+  metier-common
+  PUBLIC
     opentxs
-    protobuf::libprotobuf-lite
     Qt::Core
     Qt::Gui
 )
-
-if(NOT METIER_BUNDLED_OPENTXS)
-  target_include_directories(
-    metier-license SYSTEM PRIVATE "${opentxs_INCLUDE_DIRS}"
-  )
-endif()
