--- a/src/widgets/CMakeLists.txt
+++ b/src/widgets/CMakeLists.txt
@@ -3,25 +3,10 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
-set(cxx-sources
+target_sources(
+  metier-common
+  PRIVATE
     "enterpassphrase/imp.cpp"
-    "accountstatus.cpp"
-    "addcontact.cpp"
-    "blockchainchooser.cpp"
-    "blockchainsend.cpp"
-    "enterpassphrase.cpp"
-    "firstrun.cpp"
-    "licenses.cpp"
-    "mainwindow.cpp"
-    "newseed.cpp"
-    "profilealias.cpp"
-    "qrtoolbutton.cpp"
-    "receivingaddress.cpp"
-    "recoverwallet.cpp"
-    "seedmanager.cpp"
-    "showseed.cpp"
-)
-set(cxx-headers
     "blockchainsend/imp.hpp"
     "enterpassphrase/imp.hpp"
     "mainwindow/chaintoolboxmanager.hpp"
@@ -30,48 +15,50 @@ set(cxx-headers
     "newseed/imp.hpp"
     "recoverwallet/imp.hpp"
     "showseed/imp.hpp"
-)
-set(moc-headers
+    "accountstatus.cpp"
     "accountstatus.hpp"
+    "addcontact.cpp"
     "addcontact.hpp"
+    "blockchainchooser.cpp"
     "blockchainchooser.hpp"
+    "blockchainsend.cpp"
     "blockchainsend.hpp"
+    "enterpassphrase.cpp"
     "enterpassphrase.hpp"
+    "firstrun.cpp"
     "firstrun.hpp"
+    "licenses.cpp"
     "licenses.hpp"
+    "mainwindow.cpp"
     "mainwindow.hpp"
+    "newseed.cpp"
     "newseed.hpp"
+    "profilealias.cpp"
     "profilealias.hpp"
+    "qrtoolbutton.cpp"
     "qrtoolbutton.hpp"
+    "receivingaddress.cpp"
     "receivingaddress.hpp"
+    "recoverwallet.cpp"
     "recoverwallet.hpp"
+    "seedmanager.cpp"
     "seedmanager.hpp"
+    "showseed.cpp"
     "showseed.hpp"
 )
-qt_wrap_cpp(moc-sources "${moc-headers}")
 
-add_library(
-  metier-widgets OBJECT
-  "${cxx-sources}"
-  "${cxx-headers}"
-  "${moc-sources}"
-  "${moc-headers}"
-)
 target_link_libraries(
-  metier-widgets
+  metier-common
   PUBLIC
     Qt::Core
     Qt::Network
     Qt::Widgets
-  PRIVATE
-    metier-ui
-    qr-code-generator
     opentxs
-    protobuf::libprotobuf-lite
+    qr-code-generator
 )
 
 if(NOT METIER_BUNDLED_OPENTXS)
   target_include_directories(
-    metier-widgets SYSTEM PRIVATE "${opentxs_INCLUDE_DIRS}"
+    metier-common SYSTEM PRIVATE "${opentxs_INCLUDE_DIRS}"
   )
 endif()
