--- a/licenses/license.cpp.in
+++ b/licenses/license.cpp.in
@@ -27,7 +27,7 @@ auto make_vector() noexcept -> LicenseData;
 auto make_vector() noexcept -> LicenseData
 {
     auto output = LicenseData{
-        {METIER_APPSTREAM_NAME,
+        {u8"@METIER_APPSTREAM_NAME@",
          std::string{reinterpret_cast<const char*>(LICENSE), LICENSE_len}},
         {"Boost",
          std::string{reinterpret_cast<const char*>(boost_txt), boost_txt_len}},
