--- a/src/skin/CMakeLists.txt
+++ b/src/skin/CMakeLists.txt
@@ -3,6 +3,8 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
-target_sources(metier-rpc PRIVATE "rpc.cpp" "rpc.hpp")
-target_link_libraries(metier-rpc PUBLIC Qt::Core)
-target_compile_definitions(metier-rpc PRIVATE METIER_APP_NAME="${PROJECT_NAME}")
+add_subdirectory(default)
+
+if(METIER_QML_INTERFACE)
+  add_subdirectory(qml)
+endif()
