--- a/src/skin/default/CMakeLists.txt
+++ b/src/skin/default/CMakeLists.txt
@@ -3,6 +3,4 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
-target_sources(metier-rpc PRIVATE "rpc.cpp" "rpc.hpp")
-target_link_libraries(metier-rpc PUBLIC Qt::Core)
-target_compile_definitions(metier-rpc PRIVATE METIER_APP_NAME="${PROJECT_NAME}")
+target_sources(metier-common PRIVATE "qwidget.qrc")
