--- a/.github/workflows/flatpak.yml
+++ b/.github/workflows/flatpak.yml
@@ -13,7 +13,18 @@ jobs:
       image: bilelmoussaoui/flatpak-github-actions:kde-5.15
       options: --privileged
     steps:
-    - uses: actions/checkout@v2
+    - name: Get more disk space
+      run: |
+        sudo rm -rf "/usr/local/lib/android"
+        sudo rm -rf "${JAVA_HOME_8_X64}"
+        sudo rm -rf "${JAVA_HOME_11_X64}"
+      shell: bash
+      continue-on-error: true
+    - name: Checkout metier
+      uses: actions/checkout@v3
+      with:
+        fetch-depth: '0'
+        submodules: 'recursive'
     - uses: bilelmoussaoui/flatpak-github-actions/flatpak-builder@v3
       with:
         manifest-path: package/gui.flatpak.json
