--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,8 +18,8 @@ set(METIER_CLI_COMMAND "metierctl")
 set(METIER_GUI_OUTPUT_NAME ${PROJECT_NAME})
 
 set(METIER_VERSION_MAJOR 23)
-set(METIER_VERSION_MINOR 0)
-set(METIER_VERSION_PATCH 1)
+set(METIER_VERSION_MINOR 1)
+set(METIER_VERSION_PATCH 0)
 
 execute_process(
   COMMAND
@@ -105,6 +105,17 @@ set_compiler_flags(20 ${METIER_PEDANTIC_BUILD})
 
 if(NOT MSVC)
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-extra-semi-stmt -Wno-noexcept -Wno-redundant-parens -Wno-reserved-identifier")
+endif()
+
+if(CMAKE_CXX_COMPILER_ID
+   MATCHES
+   GNU
+)
+  # too many false positives, mostly in standard library and third party headers
+  # we can't do anything about anyway
+  set(CMAKE_CXX_FLAGS
+      "${CMAKE_CXX_FLAGS} -Wno-error=null-dereference -Wno-error=stringop-overflow= -Wno-error=stringop-overread"
+  )
 endif()
 
 # -----------------------------------------------------------------------------
